--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - MARIADB_CHARACTER_SET=utf8mb4
       - MYSQL_ROOT_PASSWORD=moodle
     volumes:
-      - '/src/config/databases/moodle:/bitnami/mariadb'
+      - 'mariadb_data:/bitnami/mariadb'
   moodle:
     image: docker.io/bitnami/moodle:latest
     ports:
@@ -23,8 +23,8 @@ services:
       - PUID=998
       - PGID=100
     volumes:
-      - '/src/config/moodle:/bitnami/moodle'
-      - '/src/config/moodle_data:/bitnami/moodledata'
+      - 'moodle_data:/bitnami/moodle'
+      - 'moodledata_data:/bitnami/moodledata'
     depends_on:
       - mariadb
 volumes:
