--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - MARIADB_USER=root
       - MARIADB_DATABASE=moodle
       - MARIADB_CHARACTER_SET=utf8mb4
-      - MYSQL_ROOT_PASSWORD=moodle
+      - MARIADB_PASSWORD=moodle
     volumes:
       - 'mariadb_data:/bitnami/mariadb'
   moodle:
