--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,42 @@
 version: '2'
 services:
   mariadb:
-    image: docker.io/bitnami/mariadb:10.6
+    image: docker.io/bitnami/mariadb:latest
     environment:
-      - MARIADB_USER=root
-      - MARIADB_DATABASE=moodle
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_USER=bn_moodle
+      - MARIADB_PASSWORD=bn_moodle
+      - MARIADB_DATABASE=bitnami_moodle
       - MARIADB_CHARACTER_SET=utf8mb4
-      - MARIADB_PASSWORD=moodle
+      - MARIADB_COLLATE=utf8mb4_unicode_ci
     volumes:
-      - 'mariadb_data:/bitnami/mariadb'
+      - ./database:/bitnami/mariadb
+
   moodle:
-    image: docker.io/bitnami/moodle:latest
+    container_name: moodle
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - EXTRA_LOCALES=pt_BR.UTF-8 UTF-8, fr_FR.UTF-8 UTF-8, de_DE.UTF-8 UTF-8, it_IT.UTF-8 UTF-8, es_ES.UTF-8 UTF-8
     ports:
-      - '80:8080'
-      - '443:8443'
+      - 80:8080
+      - 443:8443
     environment:
+      - ALLOW_EMPTY_PASSWORD=yes
       - MOODLE_DATABASE_HOST=mariadb
-      - MOODLE_DATABASE_PORT_NUMBER=3306
-      - MOODLE_DATABASE_USER=root
-      - MOODLE_DATABASE_NAME=moodle
-      - MOODLE_DATABASE_PASSWORD=moodle
-      - PUID=998
-      - PGID=100
+      - MOODLE_DATABASE_USER=bn_moodle
+      - MOODLE_DATABASE_PASSWORD=bn_moodle
+      - MOODLE_DATABASE_NAME=bitnami_moodle
+      - MOODLE_SITE_NAME=HigIA Cursos
+      - MOODLE_SMTP_HOST=smtp.titan.email
+      - MOODLE_SMTP_PORT=465
+      - MOODLE_SMTP_USER=treinamento@higiatec.com.br
+      - MOODLE_SMTP_PASSWORD=Treinamento@22
+      - MOODLE_SMTP_PROTOCOL=tls
+      
     volumes:
-      - 'moodle_data:/bitnami/moodle'
-      - 'moodledata_data:/bitnami/moodledata'
+      - ./moodle_data:/bitnami/moodle
+      - ./moodledata_data:/bitnami/moodledata
     depends_on:
       - mariadb
-volumes:
-  mariadb_data:
-    driver: local
-  moodle_data:
-    driver: local
-  moodledata_data:
-    driver: local
